update(server/swagger): update swagger api info
